# briefkist

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  plan.md  pyproject.toml
.claude/: settings.json
.claude/skills/review-prompts/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-site.yml
app/: README.md  pubspec.yaml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app_config.dart  archive_controller.dart  main.dart  uploads_controller.dart
app/lib/api/: client.dart  models.dart
app/lib/design/: mf_icons.dart  mf_theme.dart  tokens.g.dart
app/lib/desktop/: archive_content.dart  desktop_shell.dart  detail_content.dart  settings_content.dart  upload_content.dart
app/lib/dev/: gallery.dart
app/lib/mobile/: archive_screen.dart  capture_screen.dart  document_detail_screen.dart  mobile_shell.dart  onboarding_screen.dart  scan_pairing_screen.dart  settings_screen.dart
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/macos/Runner/: DebugProfile.entitlements
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: pairing_payload_test.dart  uploads_controller_test.dart  widget_test.dart
deploy/: app.briefkist.server.plist.template  install.sh  nl.eviloverlord.flopy.plist.template
design/: MIRROR.md  readme.md
design/components/actions/: Button.jsx  IconButton.jsx
design/components/display/: Chip.jsx  DocumentCard.jsx  EmptyState.jsx  MetaRow.jsx  PageThumb.jsx  PrivacyMark.jsx  StatusBadge.jsx
design/components/feedback/: Dialog.jsx  Sheet.jsx  Toast.jsx
design/components/inputs/: SearchInput.jsx  Select.jsx  TextField.jsx
design/components/navigation/: AppHeader.jsx  TabBar.jsx
design/tokens/: base.css  colors.css  elevation.css  fonts.css  spacing.css  typography.css
design/ui_kits/: kitdata.jsx
design/ui_kits/desktop/: kit.desktop.jsx
design/ui_kits/mobile/: kit.mobile.jsx
design/website/: 404.dc.html  Account.dc.html  Blog Article.dc.html  Docs Article.dc.html  Docs.dc.html  Landing.dc.html  Legal.dc.html  Pricing.dc.html  Security.dc.html  Signup.dc.html  SiteFooter.dc.html  SiteNav.dc.html  Status Reference.dc.html
docs/: RUNBOOK.md  design-feedback.md
docs/phase0/: VERDICT.md  report.md  results.json
docs/research/: hosted-privacy-architecture.md  naming-round.md  oss-distribution-licensing.md  positioning-pricing-website.md
scripts/: gen_flutter_tokens.py  merge-when-green.sh  status.sh
server/: __init__.py  app.py  auth.py  config.py  db.py  embeddings.py  pipeline_runner.py  store.py  tokens_cli.py  worker.py
spike/: README.md  __init__.py  benchmark.py  extract.py  ocr_engines.py  preprocess.py  validate.py
tests/: test_api.py  test_config.py  test_migration.py  test_store.py  test_testset.py  test_validate.py  test_worker.py
testset/: README.md  __init__.py  degrade.py  entities.py  generate.py  render.py  templates.py
web/: app.js  index.html  style.css
website/: build.py
website/src/assets/: site.css
website/src/pages/: 404.html  index.html  legal.html  pricing.html  security.html  signup.html
website/src/partials/: footer.html  (+1 more)
(+31 files in other folders)
