[project]
name = "my-flopy"
version = "0.1.0"
description = "Local-first snail-mail archiver (see plan.md)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pillow>=10.0",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
