[project]
name = "briefkist"
version = "0.1.0"
description = "Local-first snail-mail archiver (see plan.md)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pillow>=10.0",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "httpx>=0.27",
    "pydantic>=2.7",
    "rapidfuzz>=3.6",
    "pyobjc-framework-Vision>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "sqlite-vec==0.1.6",
    "pillow-heif>=0.16",
]

[project.optional-dependencies]
# The OCR engine off macOS (Apple Vision is darwin-only) — required in the
# Docker image, optional on macOS where paddlepaddle wheels are hit-or-miss
# (the benchmark treats a missing PaddleOCR as "engine unavailable" rather
# than an error, plan.md §6.2).
# PINNED as a pair: paddleocr/paddlepaddle version combos are landmines
# (e.g. paddleocr 3.3 + paddle 3.0 broke in Docker on both archs — see
# docs/research/oss-distribution-licensing.md §2). 3.4.1 + 3.3.1 is the exact
# combo this repo's engine code (spike/ocr_engines.py, paddleocr 3.x pipeline
# API, PP-OCRv5 models) was written and tested against — bump only as a pair,
# with a benchmark re-run.
paddle = [
    "paddleocr==3.4.1",
    "paddlepaddle==3.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
